<resources>
    <string name="app_name">Clinica App</string>

    <!--  Strings Login  -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem Vindo! "</string>
    <string name="invalid_username">Nome de usuário inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="login_failed">"Login não sucedido"</string>

    <!--  Strings CRUDS  -->
    <string name="cancel_button">Cancelar</string>
    <string name="create_crud_button">Cadastrar</string>
    <string name="deletar_button">Deletar</string>
    <string name="atualizar_button">Atualizar</string>

    <!--  Main Menu  -->
    <string name="menu_agendar_consulta">Consultas</string>
    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_medicos">Médicos</string>
    <string name="menu_outros">Outros</string>

    <!--  Menu Perifericos  -->
    <string name="perifericos_menu_planos">Planos</string>
    <string name="perifericos_menu_especialidades">Especialidade</string>
    <string name="perifericos_menu_formas_pagamento">Formas de Pagamento</string>

    <!--  Consulta  -->
    <string name="agendar_consulta_titulo">Agendar Consulta</string>
    <string name="listar_consultas_titulo">Consultas Marcadas</string>
    <string name="agendar_consulta_btn_alterar">Alterar</string>
    <string name="agendar_consulta_btn_pagar">Pagar</string>
    <string name="medico_text_view_default">Selecionar Medico</string>
    <string name="paciente_text_view_default">Selecionar Paciente</string>
    <string name="cobertura_text_view_default">Selecionar Cobertura</string>
    <string name="valor_text_view_default">Valor</string>
    <string name="hint_agendar_consulta_data">Data</string>

    <!--  Especialidade  -->
    <string name="cadastrar_especialidade_titulo">Cadastrar Especialidade</string>
    <string name="atualizar_especialidade_titulo">Editar Especialidade</string>
    <string name="hint_cadastrar_especialidade">Nome Especialidade</string>
    <string name="listar_especialidade_titulo">Selecionar Especialidade</string>

    <!--  FormaPagamento  -->
    <string name="cadastrar_forma_pagamento_titulo">Cadastrar Forma de Pagamento</string>
    <string name="atualizar_forma_pagamento_titulo">Editar Forma de Pagamento</string>
    <string name="hint_cadastrar_forma_pagamento">Forma de Pagamento</string>
    <string name="listar_forma_pagamento_titulo">Selecionar Forma de Pagamento</string>

    <!--  Pagamento  -->
    <string name="cadastrar_pagamento_titulo">Pagamento</string>
    <string name="atualizar_pagamento_titulo">Pagamento</string>
    <string name="hint_cadastrar_pagamento_valor">Valor</string>
    <string name="listar_pagamento_titulo">Selecionar Forma de Pagamento</string>

    <!--  Medico  -->
    <string name="cadastrar_medico_titulo">Cadastrar Médico</string>
    <string name="atualizar_medico_titulo">Editar Médico</string>
    <string name="hint_cadastrar_medico_nome">Nome</string>
    <string name="hint_cadastrar_medico_crm">CRM</string>
    <string name="hint_cadastrar_medico_especialidade">Especialidade</string>
    <string name="listar_medico_titulo">Selecionar Médico</string>

    <!--  Cobertura  -->
    <string name="cadastrar_cobertura_titulo">Cadastrar Plano de Cobertura</string>
    <string name="atualizar_cobertura_titulo">Editar Plano de Cobertura</string>
    <string name="hint_cadastrar_cobertura">Nome do Plano</string>
    <string name="listar_cobertura_titulo">Selecionar Plano de Cobertura</string>

    <!--  Paciente  -->
    <string name="cadastrar_paciente_titulo">Cadastrar Paciente</string>
    <string name="cadastrar_paciente_subtitulo1">Dados Pessoais</string>
    <string name="cadastrar_paciente_subtitulo2">Endereço</string>
    <string name="atualizar_paciente_titulo">Editar Paciente</string>
    <string name="hint_cadastrar_paciente_nome">Nome</string>
    <string name="hint_cadastrar_paciente_data_nasc">Data de Nascimento</string>
    <string name="hint_cadastrar_paciente_celular">Celular</string>
    <string name="hint_cadastrar_paciente_rg">RG</string>
    <string name="hint_cadastrar_paciente_cpf">CPF</string>
    <string name="hint_cadastrar_paciente_rua">Rua</string>
    <string name="hint_cadastrar_paciente_bairro">Bairro</string>
    <string name="hint_cadastrar_paciente_numero">Número</string>
    <string name="listar_paciente_titulo">Selecionar Paciente</string>

</resources>
