<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cruds.paciente.CadastrarPacienteActivity">

    <TextView
        android:id="@+id/create_paciente_titulo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cadastrar_paciente_titulo"
        android:textSize="@dimen/create_titulo_dimens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/create_paciente_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/create_paciente_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_paciente_titulo_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/list_view_padding"
            android:padding="@dimen/list_view_padding">

            <EditText
                android:id="@+id/create_paciente_nome_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_cadastrar_paciente_nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/create_paciente_data_nasc_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_cadastrar_paciente_data_nasc"
                android:inputType="date" />

            <EditText
                android:id="@+id/create_paciente_cel_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_cadastrar_paciente_celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/create_paciente_rg_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_cadastrar_paciente_rg"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/create_paciente_cpf_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_cadastrar_paciente_cpf"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/create_paciente_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_buttons_height"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/create_paciente_cancelar_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/colorCancelButton"
            android:onClick="onCLickCancelarButton"
            android:text="@string/cancel_button"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/create_paciente_cadastrar_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/colorConfirmButton"
            android:onClick="onClickCreateButton"
            android:text="@string/create_crud_button"
            android:textColor="@android:color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>