<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cruds.consulta.CadastrarConsultaActivity">

    <TextView
        android:id="@+id/create_medico_titulo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/agendar_consulta_titulo"
        android:textSize="@dimen/create_titulo_dimens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/create_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/create_medico_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_medico_titulo_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/list_view_padding"
            android:padding="@dimen/list_view_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/create_subtitulo_dimens"
                    android:text="@string/paciente_text_view_default" />

                <Button
                    android:id="@+id/buttonPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickAlterarPaciente"
                    android:text="@string/agendar_consulta_btn_alterar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMedico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/create_subtitulo_dimens"
                    android:text="@string/medico_text_view_default" />

                <Button
                    android:id="@+id/buttonMedico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickAlterarMedico"
                    android:text="@string/agendar_consulta_btn_alterar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCobertura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/create_subtitulo_dimens"
                    android:text="@string/cobertura_text_view_default" />

                <Button
                    android:id="@+id/buttonCobertura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickAlterarCobertura"
                    android:text="@string/agendar_consulta_btn_alterar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPagamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/create_subtitulo_dimens"
                    android:text="@string/valor_text_view_default" />

                <Button
                    android:id="@+id/buttonPagamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickPagar"
                    android:text="@string/agendar_consulta_btn_pagar" />
            </LinearLayout>

            <EditText
                android:id="@+id/data_text_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_agendar_consulta_data"
                android:inputType="none" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/create_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/create_scroll_view"
        app:layout_constraintTop_toTopOf="@+id/create_scroll_view" />

    <LinearLayout
        android:id="@+id/create_medico_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_buttons_height"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/create_medico_cancelar_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/colorCancelButton"
            android:onClick="onClickCancelarButton"
            android:text="@string/cancel_button"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/create_medico_cadastrar_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/colorConfirmButton"
            android:onClick="onClickCreateButton"
            android:text="@string/create_crud_button"
            android:textColor="@android:color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>